Реализация кеша на SoftReference